fix dialog pos (y) and some text overflow etc

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body * {
 #summary,
 #score {
     position: relative;
-    top: 50px;
+    top: 54px;
     display: none;
     z-index: 3;
 }
@@ -95,7 +95,7 @@ body * {
 
 #log {
     width: 820px;
-    height: 320px;
+    height: 460px;
     overflow-y: auto;
     border: 1px solid darkgray;
     z-index: 0;
